--- a/src/tests/stroopTest.html
+++ b/src/tests/stroopTest.html
@@ -7,6 +7,7 @@
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="/socket.io/socket.io.js"></script>
 
   <meta charset='utf-8'>
   <style>
@@ -19,6 +20,32 @@
   <title>Stroop Testi</title>
 </head>
 
+<script>
+  var lastDropboxFileId;
+
+  var socket = io('/');
+  socket.on('connect', function () {
+    console.log("Websocket Connected, id: ", socket.id);
+
+    document.getElementById("wsId").innerHTML = socket.id.substr(0, 4).toLowerCase();
+
+  });
+  socket.on('disconnect', function () { });
+
+  socket.on('start-test', function (fileId) {
+    console.log("Starting test! File Id:", fileId);
+    lastDropboxFileId = fileId;
+
+    document.getElementById("dropboxFile").value = fileId;
+
+    startTest();
+  });
+
+</script>
+
+<script src="httpHelper.js"></script>
+<script src="dropboxHelper.js"></script>
+
 <body>
   <div>
     <input id="radioColor" type="radio" name="stroopType" value="Color" checked /><span id="color">Renk</span>
@@ -27,6 +54,7 @@
 
     <button id="btnStart" onclick="startTest()" ondblclick="a = 1">Teste başla</button>
     <button id="btnStop" onclick="stopTest(true)" disabled=true>Durdur</button>
+    <span id="lblClientId">Kullanıcı ID: </span><output id="wsId"></output>
   </div>
   <div>
     <div id="alert"></div>
@@ -57,16 +85,14 @@
   </div>
 
   <div>
-    <span id="eda_File">EDA Dosyası :</span><input id="edaFile" type="file" name="edaFile" />
-    <span id="acc_File">ACC Dosyası :</span><input id="accFile" type="file" name="accFile" />
-    <span id="hr_File">HR Dosyası :</span><input id="hrFile" type="file" name="hrFile" />
-    <span id="temperature_File">Sıcaklık Dosyası :</span><input id="temperatureFile" type="file"
-      name="temperatureFile" />
-    <span id="record_File">Kayıt Dosyası :</span><input id="recordFile" type="file" name="recordFile" />
+    <button type="button" onclick="listFolders('stroop')" class="btn btn-info btn-sm" data-toggle="modal" data-target="#modalSelectRecord">Dropbox</button>
+    <input id="dropboxFile" type="text" placeholder="Dropbox id"/>
+    <button id="btnLoadRecords" onclick="loadFromDropbox('stroop')">Yükle</button>
   </div>
-  <output id="selectedFile" style="display: none"></output>
 
   <div id="edaChartContainer" style="height: 300px; width: 100%;"></div>
+  <div id="ecgChartContainer" style="height: 300px; width: 100%;"></div>
+
   <div id="accChartContainer" style="height: 300px; width: 100%;"></div>
   <div id="hrChartContainer" style="height: 300px; width: 100%;"></div>
   <div id="temperatureChartContainer" style="height: 300px; width: 100%;"></div>
@@ -79,6 +105,23 @@
 
   <!--Perform translation -->
   <script type="text/javascript" src="../resources/js/translate.js"></script>
+
+  <!-- Modal -->
+  <div id="modalSelectRecord" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Select Record</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div id="recordListInModal" class="modal-body"/>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script type="text/javascript">
     window.addEventListener('load', init, false);
@@ -141,6 +184,7 @@
       return avg;
     }
 
+    var imageSequence = [];
     var allStroopImages = [];
     var stroopImageIndex = 0;
     var numberOfImages = 20;
@@ -153,6 +197,7 @@
     var lastImageShownTime = null;
     var testStartDate = null;
     var isColorSelected = true;
+    var typeOfRecord = 'color';
     var image = document.getElementById("testImage");
     var isStarted = false;
     var isAdjustTimeModeOn = false;
@@ -166,8 +211,8 @@
     function onStroopImageCountChanged() {
       numberOfImages = document.getElementById("imageCount").value;
       generateImageSequence().then(value => {
-        stroopImageSequence = value;
-        console.log(stroopImageSequence);
+        imageSequence = value;
+        console.log(imageSequence);
       });
     }
 
@@ -177,14 +222,14 @@
 
     // To be changed with onselection
     function answer(selection) {
-      const stroopImagePath = stroopImageSequence[stroopImageIndex];
+      const stroopImagePath = imageSequence[stroopImageIndex];
       const imageCode = +(stroopImagePath.substr(stroopImagePath.indexOf('.png') - 2, 2));
 
       const correctness = isCorrect(selection, isColorSelected, imageCode)
 
       imagesShownTimeList.push({ imageFile: image.src.substr(image.src.indexOf("resource")), date: lastImageShownTime, dateAnswered: Date.now(), correct: correctness });
 
-      if (++stroopImageIndex < stroopImageSequence.length) {
+      if (++stroopImageIndex < imageSequence.length) {
         setImage();
       } else {
         stopTest(false);
@@ -192,7 +237,7 @@
     }
 
     function setImage() {
-      image.src = stroopImageSequence[stroopImageIndex];
+      image.src = imageSequence[stroopImageIndex];
       lastImageShownTime = Date.now();
     }
 
@@ -270,7 +315,8 @@
       document.getElementById("btnStop").disabled = false;
 
       isColorSelected = document.getElementById("radioColor").checked;
-      console.log("Color Selected :" + isColorSelected);
+      typeOfRecord = isColorSelected ? 'color' : 'word';
+      console.log("Type of test :" + typeOfRecord);
       document.getElementById("radioColor").disabled = true;
       document.getElementById("radioWord").disabled = true;
 
@@ -308,15 +354,32 @@
         //console.log(parsableList);
         imagesShownTimeList = JSON.parse(parsableList);
 
-        var link = document.getElementById('downloadlink');
-        link.download = testStartDate + "_" + (isColorSelected ? "Color" : "Word") + ".txt";
-
         var age = localStorage.getItem("userAge");
         var gender = localStorage.getItem("userGender");
-        var fileContent = age + '\n' + gender + '\n' + JSON.stringify(strImagesShownTime);
 
-        link.href = makeTextFile(fileContent);
-        link.style.display = 'block';
+        const metadataFileContent = {
+          age,
+          gender,
+          typeOfRecord,
+          imagesShownTimeList
+        };
+
+        if(lastDropboxFileId) {
+          fetch(`/records/stroop/${lastDropboxFileId}/metadata`, {
+            method: 'POST',
+            body: JSON.stringify(metadataFileContent),
+            headers: {
+              'Content-Type': 'application/json'
+            }
+          }).then( res => {
+            if(res.ok) {
+              console.log('Uploaded metadata file successfully!');
+            } else {
+              console.error('Stroop test metadata file could not be saved! Dropbox id:' + lastDropboxFileId);
+            }
+          });
+        }
+
       }
       stroopImageIndex = 0;
     }
@@ -329,16 +392,9 @@
 
       loadImages().then(() => {
         generateImageSequence().then(value => {
-          stroopImageSequence = value;
+          imageSequence = value;
         });
       });
-
-
-      document.getElementById('edaFile').addEventListener('change', handleEdaFileSelection, false);
-      document.getElementById('accFile').addEventListener('change', handleAccFileSelection, false);
-      document.getElementById('hrFile').addEventListener('change', handleHrFileSelection, false);
-      document.getElementById('temperatureFile').addEventListener('change', handleTemperatureFileSelection, false);
-      document.getElementById('recordFile').addEventListener('change', handleRecordFileSelection, false);
     }
 
     function checkForFileApiSupport() {
@@ -818,7 +874,7 @@
     }
 
     function setImageAtTime(timeOfPoint) {
-      timeOfPointInMs = timeOfPoint * 1000;
+      let timeOfPointInMs = timeOfPoint * 1000;
       timeOfPointInMs += adjustmentInMs;
 
       console.log("setImageAtTime:" + timeOfPointInMs);
