Integrate VR test, store rest interval in metadata.

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,11 @@
 						<img src="resources/images/countdown.jpg" alt="Countdown Test" style="width:200px;height:200px;border:0">
 					</a>
 				</td>
+				<td>
+					<a id="vrImageTestLink" href="tests/vrImageTest.html" onclick="setUserInfo()">
+						<img src="resources/images/vr_glasses.jpg" alt="VR Image Test" style="width:200px;height:200px;border:0">
+					</a>
+				</td>
 			</tr>
 			<tr>
 				<td id="image_test">
@@ -73,6 +78,10 @@
 				<td id="countdown_test">
 					Geri Sayım Testi
 				</td>
+				<td id="vr_image_test">
+					Sanal Gerçeklik Resim Testi
+				</td>
+
 			</tr>
 		</table>
 	</div>
