--- a/src/tests/stroopTest.html
+++ b/src/tests/stroopTest.html
@@ -189,8 +189,8 @@
     var stroopImageIndex = 0;
     var numberOfImages = 20;
     var imagesShownTimeList = [];
-    var edaInitTime, accInitTime, hrInitTime, temperatureInitTime;
-    var edaFrequency, accFrequency, edaPeriodInMs;
+    var edaInitTime, accInitTime, hrInitTime, temperatureInitTime, ecgInitTime;
+    var edaFrequency, accFrequency, edaPeriodInMs, ecgFrequency;
     var hrFrequency, temperatureFrequency;
     var edaInitIndex = 0, hrInitIndex = 0, temperatureInitIndex = 0;
     var increment, accIncrement, hrIncrement;
